--- a/hoja_de_vida.tex
+++ b/hoja_de_vida.tex
@@ -53,9 +53,13 @@
 
 % Add a picture to the top right of the page. Comment or delete if you do not 
 % want a picture
-\photo{foto}
+\photo{foto_hoja_de_vida.jpeg}
 
 \textit{"La disciplina tarde que temprano vencerá la inteligencia" , \textit{Yokoi Kenji}.}
+
+\section{Perfil y Fortalezas}
+
+ Amante de la tecnología y de sacar el mejor provecho de la misma, entendiendo los procesos y otras implicaciones que esta conlleva. Me adapto fácil a entornos que están en constante cambio, poseo buenos conocimientos técnicos y también habilidades \textbf{comunicativas} y de \textbf{liderazgo} , llevando un ambiente de \textbf{respeto} ante todo. Disciplinado, motivado por lo que me apasiona.
 
 \section*{Educación}
 % Use tabularcv environment to make a two column environment. The left column 
@@ -64,19 +68,19 @@
 \begin{tabularcv}
 
 2015-Presente   &   \worktitle{Ingeniería de sistemas}{Universidad EAFIT}
-                \newline Gusto por la  \textbf{programación}, \textbf{la algoritmia} y la administración de sistemas basados en \textbf{linux}.
+                \newline Pasión por la  \textbf{programación}, \textbf{la algoritmia}, \textbf{automatización} de procesos y la administración de sistemas basados en \textbf{linux}, Además poseer conocimiento en diferentes metodologías de desarrollo, tanto tradicionales como ágiles,  con fortaleza en \textbf{scrum}, consciente de las buenas practicas y patrones de desarrollo como \textbf{DevOps} y \textbf{código limpio}.
                 \begin{itemize}
-				  \item Realización de diversos proyectos que cubren tópicos como programación para sistemas operativos \textbf{(POXIS)}, \textbf{arduino}, \textbf{programación móvil}, \textbf{web services}, \textbf{programación funcional}, \textbf{data science}, entre otras.
+				  \item Realización de diversos proyectos que cubren tópicos como programación para sistemas operativos \textbf{(POSIX)}, \textbf{arduino}, \textbf{programación móvil(Ionic,Android)}, \textbf{web services(AWS)}, \textbf{programación funcional}, \textbf{data science}.\link{https://drive.google.com/open?id=1DdJ-zSWe93dtckBD8_2KfLKlCP9mtG4L}, entre otras.
 				  \item Integrante del semillero de programación competitiva desde el 2016.
-				  \item  Habilidad en la solución de problemas cotidianos por medio de la \textbf{algoritmia}.
+				  \item  Habilidad en la solución de problemas por medio de la \textbf{algoritmia}.
 				  \item \textbf{Autodidacta}.
                 \end{itemize}
                 \\
                 
 2003-2014   &   \worktitle{Bachiller}{Colegio San José de la Salle}  \link{https://drive.google.com/open?id=1Z0-YVHVlFtDL2GwGxhAoMrZUSDcweuF7}
-                \newline Destaque mi \textbf{liderazgo} llegando a ser representante de los estudiantes en mí ultimo año. \link{https://drive.google.com/open?id=160q1YruZjghGWJOQEOUo_zYKsZ1OVReW}
+                \newline Lasallista, Educado en un ambiente que promueve una formación integral en todos los aspectos humanos, promoviendo una sana convivencia. Destaque mi \textbf{liderazgo} llegando a ser representante de los estudiantes y jefe de grupo, en mí ultimo año. \link{https://drive.google.com/open?id=160q1YruZjghGWJOQEOUo_zYKsZ1OVReW}
                 \begin{itemize}
-				  \item Realización de un proyecto \textbf{investigativo} enfocado al comportamiento social en el colegio y su desempeño académico.
+				  \item Realización de un proyecto \textbf{investigativo} enfocado al comportamiento social de los estudiantes y como afecta esto su desempeño académico.
                   \item \textbf{Orador} en \RomanNumeralCaps{2} foro de ciencias sociales.
                 \end{itemize} 
 
@@ -91,8 +95,11 @@
                 % Example use of *maincolor* and *secondcolor* in the main document.    
                   \item Programación en \textbf{Java} de servicios backend \textbf{(Spring)}, con herramientas free source como \textbf{osrm} y \textbf{postgres}.
                   \item Administración de servidores \textbf{Debian}.
+                  \item Creacion y uso de servicios \textbf{REST}.
+                  \item Creación de herramientas en java para facilitar y agilizar los quehaceres investigativos.
+				  \item Uso de \textbf{linux shell} para configuraciones y administracion del sistema. 
                 \end{itemize} 
-                \\
+
                 
 \end{tabularcv}   
 
@@ -108,20 +115,25 @@
 
 \section*{Habilidades de software}
 	\textit{Intermedio:}  \textbf{C++}, \textbf{Java}.\\
-	\textit{Basico:} \textbf{Javascript, Python, Postgres,Ruby, C\#, Visual Basic, Scala,}  \textbf{JUnit},\textbf{Jenkins}.\\
+	\textit{Basico:} \textbf{Javascript, Python, Postgres, MongoDB, Ruby, C\#, Visual Basic, Scala,}  \textbf{JUnit},\textbf{Jenkins}.\\
 	\textit{Sistemas operativos:} \textbf{Linux, Windows.}\\
 	\textit{Usos de:} \textbf{linux shell} , \textbf{git} y \textbf{subversion}.\\
-	\textit{Frameworks:} \textbf{Spring, node, rails}. \\
-	\textit{Otras herramientas:} \textbf{Microsoft office, Libre Office}.
+	\textit{Frameworks:} \textbf{Spring, node, rails, Ionic, Android Studio}. \\
+	\textit{Virtualizacion:} \textbf{Docker, Virtual Box}.\\
+	\textit{Hardware:} \textbf{arduino, raspberry pi}.\\
+	\textit{Otras herramientas:} \textbf{Microsoft office, Libre Office, mendeley, Latex}.
 
-\section*{Lenguajes}
+\section*{Idiomas}
 \begin{tabularcv}
 \textit{Español}     &	Nativo. \\
-\textit{Ingles}      &  	Intermedio, \textbf{B2}.\link {https://drive.google.com/open?id=1vMRxMQEZUpZY7qGLgneV0Vp1bBCL4sXO}\\
+\textit{Ingles}      &  Intermedio \textbf{B2}, con capacidad para mantener conversaciones fluidas tanto técnicas como personales .\link {https://drive.google.com/open?id=1vMRxMQEZUpZY7qGLgneV0Vp1bBCL4sXO} ,\\
 \end{tabularcv}
 
 \section*{Intereses}
-Deportes, videojuegos, socializar, programación competitiva.
+Practicar deportes, socializar, solución de problemas computacionales por diversión, videojuegos que implique pensamiento analítico y estratégico.
+
+\section*{Referencias}
+Disponibles, en caso de contactarme.
     
 \end{document}
 
