minor path change

--- a/hoja_de_vida.tex
+++ b/hoja_de_vida.tex
@@ -53,7 +53,7 @@
 
 % Add a picture to the top right of the page. Comment or delete if you do not 
 % want a picture
-\photo{foto_hoja_de_vida.jpeg}
+\photo{fotos/foto_hoja_de_vida.jpeg}
 
 \textit{"La disciplina tarde que temprano vencerá la inteligencia" , \textit{Yokoi Kenji}.}
 
