--- a/hoja_de_vida.tex
+++ b/hoja_de_vida.tex
@@ -97,7 +97,7 @@
                   \item Administración de servidores \textbf{Debian}.
                   \item Creacion y uso de servicios \textbf{REST}.
                   \item Creación de herramientas en java para facilitar y agilizar los quehaceres investigativos.
-				  \item Uso de \textbf{linux shell} para configuraciones y administracion del sistema. 
+				  \item Uso de \textbf{linux shell} para configuraciones y administración del sistema. 
                 \end{itemize} 
 
                 
@@ -120,13 +120,13 @@
 	\textit{Usos de:} \textbf{linux shell} , \textbf{git} y \textbf{subversion}.\\
 	\textit{Frameworks:} \textbf{Spring, node, rails, Ionic, Android Studio}. \\
 	\textit{Virtualizacion:} \textbf{Docker, Virtual Box}.\\
-	\textit{Hardware:} \textbf{arduino, raspberry pi}.\\
+	\textit{Hardware:} \textbf{Arduino, Raspberry pi}.\\
 	\textit{Otras herramientas:} \textbf{Microsoft office, Libre Office, mendeley, Latex}.
 
 \section*{Idiomas}
 \begin{tabularcv}
 \textit{Español}     &	Nativo. \\
-\textit{Ingles}      &  Intermedio \textbf{B2}, con capacidad para mantener conversaciones fluidas tanto técnicas como personales .\link {https://drive.google.com/open?id=1vMRxMQEZUpZY7qGLgneV0Vp1bBCL4sXO} ,\\
+\textit{Ingles}      &  Intermedio \textbf{B2}, con capacidad para mantener conversaciones fluidas tanto técnicas como personales .\link {https://drive.google.com/open?id=1vMRxMQEZUpZY7qGLgneV0Vp1bBCL4sXO}\\
 \end{tabularcv}
 
 \section*{Intereses}
